{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 970,
  "lineage": "03c0db28-8fcd-60a6-56d6-23a840d27570",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "wordpress-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:934152901962:loadbalancer/app/wof-load-balancer/2b6106dba4c18faa",
            "arn_suffix": "app/wof-load-balancer/2b6106dba4c18faa",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wof-load-balancer-1367620403.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:934152901962:loadbalancer/app/wof-load-balancer/2b6106dba4c18faa",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wof-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05f673bb4c9e00f06"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b7ad328702975ea"
              },
              {
                "subnet_id": "subnet-04dc08497303805b6"
              }
            ],
            "subnets": [
              "subnet-04b7ad328702975ea",
              "subnet-04dc08497303805b6"
            ],
            "vpc_id": "vpc-01b7bd99132667f66",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.ALB",
            "aws_subnet.PublicSubnet0",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "ALBListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:934152901962:listener/app/wof-load-balancer/2b6106dba4c18faa/87162d240e87142a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:934152901962:targetgroup/WordpressTargetGroup/2bf678a67a3f44e0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:934152901962:listener/app/wof-load-balancer/2b6106dba4c18faa/87162d240e87142a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:934152901962:loadbalancer/app/wof-load-balancer/2b6106dba4c18faa",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.wordpress-alb",
            "aws_alb_target_group.wordpress-target-group",
            "aws_security_group.ALB",
            "aws_subnet.PublicSubnet0",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "wordpress-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:934152901962:targetgroup/WordpressTargetGroup/2bf678a67a3f44e0",
            "arn_suffix": "targetgroup/WordpressTargetGroup/2bf678a67a3f44e0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:934152901962:targetgroup/WordpressTargetGroup/2bf678a67a3f44e0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "WordpressTargetGroup",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01b7bd99132667f66"
          },
          "dependencies": [
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "IP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8f1cc016d06bfea",
            "association_id": "eipassoc-0118efbd99dda7134",
            "domain": "vpc",
            "id": "eipalloc-0a8f1cc016d06bfea",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-08cf1066573cabaad",
            "private_dns": "ip-10-0-0-162.eu-west-1.compute.internal",
            "private_ip": "10.0.0.162",
            "public_dns": "ec2-52-18-77-69.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.18.77.69",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "IP2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fa93743945f2b1a",
            "association_id": "eipassoc-025666848d4544791",
            "domain": "vpc",
            "id": "eipalloc-09fa93743945f2b1a",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-02f1a935a33631584",
            "private_dns": "ip-10-0-1-36.eu-west-1.compute.internal",
            "private_ip": "10.0.1.36",
            "public_dns": "ec2-34-255-163-236.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.255.163.236",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-eu-west-1-dev-web-app-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:934152901962:internet-gateway/igw-0e71309e6cc1d6fbc",
            "id": "igw-0e71309e6cc1d6fbc",
            "owner_id": "934152901962",
            "tags": {
              "Name": "vpc-eu-west-1-dev-web-app-IGW"
            },
            "tags_all": {
              "Name": "vpc-eu-west-1-dev-web-app-IGW"
            },
            "vpc_id": "vpc-01b7bd99132667f66"
          },
          "dependencies": [
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8f1cc016d06bfea",
            "association_id": "eipassoc-0118efbd99dda7134",
            "connectivity_type": "public",
            "id": "nat-00bdfe6e73695379b",
            "network_interface_id": "eni-08cf1066573cabaad",
            "private_ip": "10.0.0.162",
            "public_ip": "52.18.77.69",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04b7ad328702975ea"
          },
          "dependencies": [
            "aws_eip.IP1",
            "aws_subnet.PublicSubnet0",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fa93743945f2b1a",
            "association_id": "eipassoc-025666848d4544791",
            "connectivity_type": "public",
            "id": "nat-0cd60b6a00a801eea",
            "network_interface_id": "eni-02f1a935a33631584",
            "private_ip": "10.0.1.36",
            "public_ip": "34.255.163.236",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04dc08497303805b6"
          },
          "dependencies": [
            "aws_eip.IP2",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:934152901962:network-acl/acl-0b35c26f6be6b3727",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b35c26f6be6b3727",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "934152901962",
            "subnet_ids": [
              "subnet-04b7ad328702975ea",
              "subnet-04dc08497303805b6"
            ],
            "tags": {
              "Application": "Wordpress-on-Fargate",
              "Name": "vpc-eu-west-1-dev-web-app-public-nacl",
              "Network": "Public"
            },
            "tags_all": {
              "Application": "Wordpress-on-Fargate",
              "Name": "vpc-eu-west-1-dev-web-app-public-nacl",
              "Network": "Public"
            },
            "vpc_id": "vpc-01b7bd99132667f66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.PublicSubnet0",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3275693370",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b35c26f6be6b3727",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.PublicSubnet0",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3858653714",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b35c26f6be6b3727",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.PublicSubnet0",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:934152901962:route-table/rtb-03c23d7e75538462f",
            "id": "rtb-03c23d7e75538462f",
            "owner_id": "934152901962",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00bdfe6e73695379b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-eu-west-1-dev-web-app-private-route-table-1"
            },
            "tags_all": {
              "Name": "vpc-eu-west-1-dev-web-app-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b7bd99132667f66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.IP1",
            "aws_nat_gateway.public_nat1",
            "aws_subnet.PublicSubnet0",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:934152901962:route-table/rtb-031759bfe10b4ccad",
            "id": "rtb-031759bfe10b4ccad",
            "owner_id": "934152901962",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0cd60b6a00a801eea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-eu-west-1-dev-web-app-private-route-table-2"
            },
            "tags_all": {
              "Name": "vpc-eu-west-1-dev-web-app-private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b7bd99132667f66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.IP2",
            "aws_nat_gateway.public_nat2",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:934152901962:route-table/rtb-0ce4fe5955c406189",
            "id": "rtb-0ce4fe5955c406189",
            "owner_id": "934152901962",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e71309e6cc1d6fbc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "Wordpress-on-Fargate",
              "Name": "vpc-eu-west-1-dev-web-app-public-route-table",
              "Network": "Public"
            },
            "tags_all": {
              "Application": "Wordpress-on-Fargate",
              "Name": "vpc-eu-west-1-dev-web-app-public-route-table",
              "Network": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b7bd99132667f66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc-eu-west-1-dev-web-app-IGW",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f4e76744a67674f",
            "route_table_id": "rtb-03c23d7e75538462f",
            "subnet_id": "subnet-0a97d86f769a7edc8"
          },
          "dependencies": [
            "aws_eip.IP1",
            "aws_nat_gateway.public_nat1",
            "aws_route_table.private1",
            "aws_subnet.PrivateSubnet0",
            "aws_subnet.PublicSubnet0",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ce58febe40db4b2",
            "route_table_id": "rtb-031759bfe10b4ccad",
            "subnet_id": "subnet-0df5724c65482efe3"
          },
          "dependencies": [
            "aws_eip.IP2",
            "aws_nat_gateway.public_nat2",
            "aws_route_table.private2",
            "aws_subnet.PrivateSubnet1",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f3842bfc2139a38",
            "route_table_id": "rtb-0ce4fe5955c406189",
            "subnet_id": "subnet-04b7ad328702975ea"
          },
          "dependencies": [
            "aws_internet_gateway.vpc-eu-west-1-dev-web-app-IGW",
            "aws_route_table.public",
            "aws_subnet.PublicSubnet0",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023e01808139cddc0",
            "route_table_id": "rtb-0ce4fe5955c406189",
            "subnet_id": "subnet-04dc08497303805b6"
          },
          "dependencies": [
            "aws_internet_gateway.vpc-eu-west-1-dev-web-app-IGW",
            "aws_route_table.public",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:934152901962:security-group/sg-05f673bb4c9e00f06",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad2115064b314036"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-05f673bb4c9e00f06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress-alb-sg",
            "name_prefix": "",
            "owner_id": "934152901962",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b7bd99132667f66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:934152901962:security-group/sg-0ad2115064b314036",
            "description": "Security Group for ECS Service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-017a1baa6179cffee"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0ad2115064b314036",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f673bb4c9e00f06"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f673bb4c9e00f06"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f673bb4c9e00f06"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f673bb4c9e00f06"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Svc-Wordpress-on-Fargate",
            "name_prefix": "",
            "owner_id": "934152901962",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b7bd99132667f66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mount_target_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:934152901962:security-group/sg-0dd4572bf13350de2",
            "description": "FileSystem Security Group",
            "egress": [],
            "id": "sg-0dd4572bf13350de2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "Wordpress-EFS-SG",
            "name_prefix": "",
            "owner_id": "934152901962",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b7bd99132667f66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:934152901962:security-group/sg-017a1baa6179cffee",
            "description": "RDS Security Group",
            "egress": [],
            "id": "sg-017a1baa6179cffee",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad2115064b314036"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Wordpress-RDS-SG",
            "name_prefix": "",
            "owner_id": "934152901962",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b7bd99132667f66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "AllowHTTPS2FetchImage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3411095398",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad2115064b314036",
            "security_group_rule_id": "sgr-0e43defe095ec2e66",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_service_sg",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "AllowUDP2FetchImage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3777431013",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ad2115064b314036",
            "security_group_rule_id": "sgr-056de6e38ea5baae0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_service_sg",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "HTTPFromAnywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-576449985",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad2115064b314036",
            "security_group_rule_id": "sgr-06c804e0b1dc103e7",
            "self": false,
            "source_security_group_id": "sg-05f673bb4c9e00f06",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ALB",
            "aws_security_group.ecs_service_sg",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "HTTPSFromAnywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-2491495375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad2115064b314036",
            "security_group_rule_id": "sgr-03a61dc979c466191",
            "self": false,
            "source_security_group_id": "sg-05f673bb4c9e00f06",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ALB",
            "aws_security_group.ecs_service_sg",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SSHFromAnywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-3076879305",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad2115064b314036",
            "security_group_rule_id": "sgr-0a8ef1f65fbb37e1e",
            "self": false,
            "source_security_group_id": "sg-05f673bb4c9e00f06",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ALB",
            "aws_security_group.ecs_service_sg",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "acceptALBTraffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8080,
            "id": "sgrule-2659415537",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad2115064b314036",
            "security_group_rule_id": "sgr-0ecf9d37c3b2af1d9",
            "self": false,
            "source_security_group_id": "sg-05f673bb4c9e00f06",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ALB",
            "aws_security_group.ecs_service_sg",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "acceptTrafficFromRDS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2904868331",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad2115064b314036",
            "security_group_rule_id": "sgr-0376d7f841428d0d9",
            "self": false,
            "source_security_group_id": "sg-017a1baa6179cffee",
            "timeouts": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_service_sg",
            "aws_security_group.wordpress-rds",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "acceptTrafficFromTask",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-257698120",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017a1baa6179cffee",
            "security_group_rule_id": "sgr-0d2ef95930e09d5cb",
            "self": false,
            "source_security_group_id": "sg-0ad2115064b314036",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_service_sg",
            "aws_security_group.wordpress-rds",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sometestfuck",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8080,
            "id": "sgrule-2002945868",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05f673bb4c9e00f06",
            "security_group_rule_id": "sgr-061e033679a686cdf",
            "self": false,
            "source_security_group_id": "sg-0ad2115064b314036",
            "timeouts": null,
            "to_port": 8080,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ALB",
            "aws_security_group.ecs_service_sg",
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:934152901962:subnet/subnet-0a97d86f769a7edc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a97d86f769a7edc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "934152901962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Wordpress-on-Fargate",
              "Name": "vpc-eu-west-1-dev-web-app-private-a",
              "Network": "Private"
            },
            "tags_all": {
              "Application": "Wordpress-on-Fargate",
              "Name": "vpc-eu-west-1-dev-web-app-private-a",
              "Network": "Private"
            },
            "vpc_id": "vpc-01b7bd99132667f66"
          },
          "dependencies": [
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:934152901962:subnet/subnet-0df5724c65482efe3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df5724c65482efe3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "934152901962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Wordpress-on-Fargate",
              "Name": "vpc-eu-west-1-dev-web-app-private-b",
              "Network": "Private"
            },
            "tags_all": {
              "Application": "Wordpress-on-Fargate",
              "Name": "vpc-eu-west-1-dev-web-app-private-b",
              "Network": "Private"
            },
            "vpc_id": "vpc-01b7bd99132667f66"
          },
          "dependencies": [
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:934152901962:subnet/subnet-04b7ad328702975ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b7ad328702975ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "934152901962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Wordpress-on-Fargate",
              "Name": "vpc-eu-west-1-dev-web-app-public-a",
              "Network": "Public"
            },
            "tags_all": {
              "Application": "Wordpress-on-Fargate",
              "Name": "vpc-eu-west-1-dev-web-app-public-a",
              "Network": "Public"
            },
            "vpc_id": "vpc-01b7bd99132667f66"
          },
          "dependencies": [
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:934152901962:subnet/subnet-04dc08497303805b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dc08497303805b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "934152901962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Wordpress-on-Fargate",
              "Name": "vpc-eu-west-1-dev-web-app-public-b",
              "Network": "Public"
            },
            "tags_all": {
              "Application": "Wordpress-on-Fargate",
              "Name": "vpc-eu-west-1-dev-web-app-public-b",
              "Network": "Public"
            },
            "vpc_id": "vpc-01b7bd99132667f66"
          },
          "dependencies": [
            "aws_vpc.vpc-eu-west-1-dev-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-eu-west-1-dev-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:934152901962:vpc/vpc-01b7bd99132667f66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b41817f17fc74d87",
            "default_route_table_id": "rtb-069b2ddefb5bc0e65",
            "default_security_group_id": "sg-09776f5eb65c07f1a",
            "dhcp_options_id": "dopt-0bd48d6d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b7bd99132667f66",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069b2ddefb5bc0e65",
            "owner_id": "934152901962",
            "tags": {
              "Application": "Wordpress-on-Fargate",
              "Name": "vpc-eu-west-1-dev-web-app",
              "Network": "Public"
            },
            "tags_all": {
              "Application": "Wordpress-on-Fargate",
              "Name": "vpc-eu-west-1-dev-web-app",
              "Network": "Public"
            }
          }
        }
      ]
    }
  ]
}